Name:               jammittools
Version:            0.4.1.1
Synopsis:           Export sheet music and audio from Windows/Mac app Jammit
Description:

  <http://www.jammit.com/ Jammit> is a service and associated app for Windows\/Mac\/iOS that sells isolated instrument audio tracks from popular music, along with full transcriptions.
  This is a library and executable that allow you to export the sheet music (in PDF format) and audio (in WAV format) to tracks that you have purchased.
  .
  Any sheet music or audio you export is solely for your own use, e.g. for use on Linux and Android devices that do not have the official app available.
  Please do not use this tool to share content with others who have not purchased it!
  .
  Please see the <https://github.com/mtolly/jammittools/blob/master/README.md README> for usage information.

License:            GPL
License-File:       LICENSE
Author:             Michael Tolly
Maintainer:         miketolly@gmail.com
Build-Type:         Simple
Cabal-Version:      >= 1.8
Category:           Sound
Homepage:           https://github.com/mtolly/jammittools
Bug-Reports:        https://github.com/mtolly/jammittools/issues
Extra-Source-Files: README.md

library
  exposed-modules:
    Sound.Jammit.Base
    Sound.Jammit.Export
  other-modules:
    Sound.Jammit.Internal.Audio
    Sound.Jammit.Internal.Image
    Sound.Jammit.Internal.TempIO
  hs-source-dirs:   src
  build-depends:
    base            >= 4.6.0.1 && < 5
    , property-list >= 0.1.0.4 && < 0.2
    , directory     >= 1.2.0.1 && < 1.3
    , filepath      >= 1.3.0.1 && < 1.5
    , containers    >= 0.5.0.0 && < 0.6
    , process       >= 1.1.0.2 && < 1.3
    , temporary     >= 1.1.2.5 && < 1.3
    , transformers  >= 0.3.0.0 && < 0.5
    , JuicyPixels   >= 3.2.2   && < 3.3
    , HPDF          >= 1.4.6   && < 1.5
    , bytestring   >= 0.10.4.0 && < 0.11
    , conduit       >= 1.2.3.1 && < 1.3
    , vector      >= 0.10.12.2 && < 0.11
    
    , conduit-audio >= 0.1 && < 0.2
    , resourcet
  ghc-options:      -Wall -O2

executable jammittools
  main-is:          Main.hs
  other-modules:
    Paths_jammittools
  build-depends:
    base            >= 4.6.0.1 && < 5
    , directory     >= 1.2.0.1 && < 1.3
    , filepath      >= 1.3.0.1 && < 1.5
    , boxes         >= 0.1.3   && < 0.2
    , jammittools   == 0.4.1.1
  ghc-options:      -Wall -O2

source-repository head
  type:             git
  location:         https://github.com/mtolly/jammittools
