Name:               jammittools
Version:            0.5.5.1
Synopsis:           Export sheet music and audio from Windows/Mac app Jammit
Description:

  <http://www.jammit.com/ Jammit> is a service and associated app for Windows\/Mac\/iOS that sells isolated instrument audio tracks from popular music, along with full transcriptions.
  This is a library and executable that allow you to export the sheet music (in PDF format) and audio (in WAV format) to tracks that you have purchased.
  .
  Any sheet music or audio you export is solely for your own use, e.g. for use on Linux and Android devices that do not have the official app available.
  Please do not use this tool to share content with others who have not purchased it!
  .
  Please see the <https://github.com/mtolly/jammittools/blob/master/README.md README> for usage information.

License:            GPL-3
License-File:       LICENSE
Author:             Michael Tolly
Maintainer:         miketolly@gmail.com
Build-Type:         Simple
Cabal-Version:      >= 1.10
Category:           Sound
Homepage:           https://github.com/mtolly/jammittools
Bug-Reports:        https://github.com/mtolly/jammittools/issues
Extra-Source-Files:
  README.md
  CHANGELOG.md

library
  exposed-modules:
    Sound.Jammit.Base
    Sound.Jammit.Export
  other-modules:
    Sound.Jammit.Internal.Audio
    Sound.Jammit.Internal.Image
    Sound.Jammit.Internal.PropertyList
  hs-source-dirs:   src
  build-depends:
    base            >= 4.6.0.1   && < 5
    , xml           >= 1.3.14    && < 1.4
    , text          >= 1.2.1.1   && < 1.3
    , directory     >= 1.2.0.1   && < 1.4
    , filepath      >= 1.3.0.1   && < 1.5
    , containers    >= 0.5.0.0   && < 0.7
    , process       >= 1.1.0.2   && < 1.7
    , transformers  >= 0.3.0.0   && < 0.6
    , JuicyPixels   >= 3.2.7     && < 3.4
    , bytestring    >= 0.10.4.0  && < 0.11
    , conduit       >= 1.2.3.1   && < 1.4
    , vector        >= 0.10.12.2 && < 0.13
    , conduit-audio >= 0.1       && < 0.3
    , resourcet     >= 1.1.7.2   && < 1.3
  ghc-options:      -Wall -O2
  c-sources:
    cbits/ima4.c
    cbits/pdfgen.c
  default-language: Haskell2010

executable jammittools
  main-is:          Main.hs
  other-modules:
    Paths_jammittools
  build-depends:
    base            >= 4.6.0.1 && < 5
    , directory     >= 1.2.0.1 && < 1.4
    , filepath      >= 1.3.0.1 && < 1.5
    , boxes         >= 0.1.3   && < 0.2
    , jammittools
  ghc-options:      -Wall -O2
  default-language: Haskell2010

source-repository head
  type:             git
  location:         https://github.com/mtolly/jammittools
